<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="35dp"
    tools:context="com.entezaar.thelperdemo.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/d_logo_size"
            android:layout_height="@dimen/d_logo_size"
            android:scaleType="fitCenter"
            android:src="@drawable/logoto"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintAnimationEnabled="true">

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_phone_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:gravity="center"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_submit_button"
            android:layout_marginTop="6dp"
            />

        <com.entezaar.thelperdemo.ui.irsansTextView
            android:id="@+id/join_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/d_secondary_text_size"
            android:text="@string/login_join"
            android:layout_marginBottom="50dp"
            app:FontType="ultralight"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/d_secondary_text_size"
        android:text="@string/login_about"/>



</RelativeLayout>
