<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.entezaar.thelperdemo.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/cardview"
            android:id="@+id/hotel_request"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/d_card_redius"
            android:layout_marginTop="@dimen/d_card_margin"
            android:layout_marginStart="@dimen/d_card_margin"
            android:layout_marginEnd="@dimen/d_card_margin"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hotel"/>
                <com.entezaar.thelperdemo.ui.irsansTextView
                    style="@style/main_ac_label"
                    app:FontType="medium"
                    android:text="@string/hotel_request_button" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/cardview"
            android:id="@+id/taxi_request"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/d_card_redius"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/d_card_margin"
            android:layout_marginStart="@dimen/d_card_margin"
            android:layout_marginEnd="@dimen/d_card_margin"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/taxi"/>
                <com.entezaar.thelperdemo.ui.irsansTextView
                    style="@style/main_ac_label"
                    app:FontType="medium"
                    android:text="@string/taxi_request_button" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/cardview"
            android:id="@+id/support_request"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/d_card_redius"
            android:layout_margin="@dimen/d_card_margin"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/support"/>
                <com.entezaar.thelperdemo.ui.irsansTextView
                    style="@style/main_ac_label"
                    app:FontType="medium"
                    android:text="@string/support_button" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>
